@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -87,7 +87,7 @@ final class EnvironmentConverter {
 
 	private StandardEnvironment createEnvironment(Class<? extends StandardEnvironment> type) {
 		try {
-			return type.newInstance();
+			return type.getDeclaredConstructor().newInstance();
 		}
 		catch (Exception ex) {
 			return new StandardEnvironment();
