@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -55,7 +55,7 @@ class JasperInitializer extends AbstractLifeCycle {
 		for (String className : INITIALIZER_CLASSES) {
 			try {
 				Class<?> initializerClass = ClassUtils.forName(className, null);
-				return (ServletContainerInitializer) initializerClass.newInstance();
+				return (ServletContainerInitializer) initializerClass.getDeclaredConstructor().newInstance();
 			}
 			catch (Exception ex) {
 				// Ignore
